--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -42,6 +42,16 @@ jobs:
       - name: Run Rest Assured tests
         run: mvn clean test
 
+      - name: Generate Allure report
+        run: mvn allure:report
+
+      - name: Upload Allure report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: target/site/allure-maven-plugin
+
       - name: Upload TestNG reports
         if: always()
         uses: actions/upload-artifact@v4
