--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -49,11 +49,11 @@ jobs:
         run: mvn io.qameta.allure:allure-maven:report
 
       - name: Upload Allure report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: target/site/allure-maven-plugin
+  if: always()
+  uses: actions/upload-artifact@v4
+  with:
+    name: allure-report
+    path: target/allure-report
 
       - name: Upload TestNG reports
         if: always()
