--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
       <artifactId>allure-testng</artifactId>
       <version>2.24.0</version>
     </dependency>
-    
 
     <dependency>
       <groupId>org.json</groupId>
@@ -90,10 +89,15 @@
       </plugin>
 
       <!-- Allure Report Plugin -->
-         <plugin>
-       <groupId>io.qameta.allure</groupId>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
         <artifactId>allure-maven</artifactId>
         <version>2.11.2</version>
+        <configuration>
+          <reportVersion>2.24.0</reportVersion>
+          <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
+          <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
+        </configuration>
       </plugin>
     </plugins>
   </build>
