--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -17,7 +17,6 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      # Provide a default
       TARGET_ENV: ${{ github.event.inputs.environment || 'dev' }}
 
     steps:
@@ -71,6 +70,9 @@ jobs:
             sleep 3
           done
 
+      - name: Install Allure CLI
+        run: npm install -g allure-commandline --save-dev
+
       - name: Run Rest Assured tests
         run: mvn clean test
         env:
@@ -79,17 +81,21 @@ jobs:
       - name: Check if Allure results were generated
         run: ls -la allure-results || echo "No allure-results directory found"
 
-      - name: Generate Allure report
-        run: mvn io.qameta.allure:allure-maven:report
+      - name: Print Allure Results Content (debug)
+        run: cat allure-results/* || echo "No files in allure-results"
 
-      - name: Upload Allure report
+      - name: Generate Allure Report using CLI
+        run: |
+          allure generate allure-results --clean -o allure-report
+
+      - name: Upload Allure Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
-          path: target/allure-report
+          path: allure-report
 
-      - name: Upload TestNG reports
+      - name: Upload TestNG Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
