--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -73,20 +73,27 @@ jobs:
       - name: Install Allure CLI
         run: npm install -g allure-commandline --save-dev
 
-      - name: Run Rest Assured tests
-        run: mvn clean test
+      - name: Run Rest Assured tests with testng.xml
+        run: mvn clean test -DsuiteXmlFile=testng.xml
         env:
           BASE_URL: ${{ env.BASE_URL }}
 
-      - name: Check if Allure results were generated
-        run: ls -la allure-results || echo "No allure-results directory found"
-
-      - name: Print Allure Results Content (debug)
-        run: cat allure-results/* || echo "No files in allure-results"
+      - name: Debug Allure Results Directory
+        run: |
+          echo "Contents of allure-results directory:"
+          if [ -d "allure-results" ]; then
+            ls -la allure-results
+          else
+            echo "❌ 'allure-results' directory not found!"
+          fi
 
       - name: Generate Allure Report using CLI
         run: |
-          allure generate allure-results --clean -o allure-report
+          if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
+            allure generate allure-results --clean -o allure-report
+          else
+            echo "⚠️ Skipping Allure report generation: No results found."
+          fi
 
       - name: Upload Allure Report
         if: always()
@@ -94,6 +101,7 @@ jobs:
         with:
           name: allure-report
           path: allure-report
+          if-no-files-found: warn
 
       - name: Upload TestNG Reports
         if: always()
