--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -63,36 +63,37 @@ jobs:
           echo "Waiting for API to be available..."
           for i in {1..30}; do
             if curl -s $BASE_URL/health; then
-              echo "API is up!"
+              echo "✅ API is up!"
               break
             fi
-            echo "Not ready yet. Retrying..."
+            echo "⏳ Not ready yet. Retrying..."
             sleep 3
           done
 
       - name: Install Allure CLI
-        run: npm install -g allure-commandline --save-dev
+        run: npm install -g allure-commandline --force
 
-      - name: Run Rest Assured tests with testng.xml
+      - name: Run Rest Assured tests with TestNG
         run: mvn clean test -DsuiteXmlFile=testng.xml
         env:
           BASE_URL: ${{ env.BASE_URL }}
 
       - name: Debug Allure Results Directory
         run: |
-          echo "Contents of allure-results directory:"
-          if [ -d "allure-results" ]; then
-            ls -la allure-results
+          echo "Contents of target/allure-results:"
+          if [ -d "target/allure-results" ]; then
+            ls -la target/allure-results
           else
-            echo "❌ 'allure-results' directory not found!"
+            echo "❌ 'target/allure-results' directory not found!"
           fi
 
-      - name: Generate Allure Report using CLI
+      - name: Generate Allure Report
         run: |
-          if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
-            allure generate allure-results --clean -o allure-report
+          mkdir -p target/allure-results
+          if [ -d "target/allure-results" ] && [ "$(ls -A target/allure-results)" ]; then
+            allure generate target/allure-results --clean -o target/allure-report
           else
-            echo "⚠️ Skipping Allure report generation: No results found."
+            echo "⚠️ Skipping Allure report generation: No results found in target/allure-results"
           fi
 
       - name: Upload Allure Report
@@ -100,7 +101,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
-          path: allure-report
+          path: target/allure-report
           if-no-files-found: warn
 
       - name: Upload TestNG Reports
@@ -110,7 +111,14 @@ jobs:
           name: test-reports
           path: target/surefire-reports
 
-      - name: Stop and remove Docker container (for dev only)
+      - name: Upload Allure Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: target/allure-results
+
+      - name: Stop and Remove Docker Container (for dev only)
         if: always() && env.TARGET_ENV == 'dev'
         run: |
           docker stop bookstore-api || true
