--- a/pom.xml
+++ b/pom.xml
@@ -17,36 +17,42 @@
   </properties>
 
   <dependencies>
+    <!-- Rest Assured -->
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
       <version>5.4.0</version>
     </dependency>
 
+    <!-- TestNG -->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>7.9.0</version>
     </dependency>
 
+    <!-- Allure TestNG Adapter -->
     <dependency>
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-testng</artifactId>
       <version>2.24.0</version>
     </dependency>
 
+    <!-- JSON -->
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20230227</version>
     </dependency>
 
+    <!-- Jackson -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.17.1</version>
     </dependency>
 
+    <!-- SLF4J Logger -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
@@ -67,7 +73,7 @@
         </configuration>
       </plugin>
 
-      <!-- Surefire Plugin -->
+      <!-- Surefire Plugin for Test Execution -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -79,28 +85,22 @@
           <systemPropertyVariables>
             <allure.results.directory>allure-results</allure.results.directory>
           </systemPropertyVariables>
-          <properties>
-            <property>
-              <name>listener</name>
-              <value>io.qameta.allure.testng.AllureTestNg</value>
-            </property>
-          </properties>
         </configuration>
       </plugin>
 
-      <!-- Allure Report Plugin -->
+      <!-- Allure Report Plugin (Optional: for local use) -->
       <plugin>
         <groupId>io.qameta.allure</groupId>
         <artifactId>allure-maven</artifactId>
         <version>2.11.2</version>
         <configuration>
           <reportVersion>2.24.0</reportVersion>
-          <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
-          <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
+          <resultsDirectory>${project.basedir}/allure-results</resultsDirectory>
+          <reportDirectory>${project.basedir}/allure-report</reportDirectory>
         </configuration>
       </plugin>
 
-      <!-- ✅ JaCoCo Plugin for Code Coverage -->
+      <!-- JaCoCo Code Coverage -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
