--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -111,7 +111,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: target/allure-report
-          enable_jekyll: true
+          enable_jekyll: false # This is the corrected line
 
       - name: Upload TestNG Reports
         if: always()
