--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -94,7 +94,6 @@ jobs:
 
       - name: Generate Allure Report
         run: |
-          mkdir -p target/allure-results
           allure generate target/allure-results --clean -o target/allure-report --report-url https://agarwalrajat02.github.io/ResAssured_Playground/
 
       - name: Upload Allure Report
@@ -111,7 +110,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: target/allure-report
-          enable_jekyll: false # This is the corrected line
+          enable_jekyll: false
 
       - name: Upload TestNG Reports
         if: always()
